--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "packageVersion": "node -e console.log(require('./package.json').version);"
   },
   "keywords": [],
   "author": {
