--- a/package.json
+++ b/package.json
@@ -33,12 +33,7 @@
           ]
         },
         {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
+          "name": "@electron-forge/maker-deb"
         }
       ]
     }
