--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build:
-    name: Upload Windows Release Asset
-    runs-on: windows-latest
+    name: Upload Linux Release Asset
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Get yarn cache directory path
@@ -38,6 +38,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./out/make/squirrel.windows/x64/universal-rpc-${{ steps.get_package_version.outputs.VERSION }} Setup.exe
-          asset_name: universal-rpc-${{ steps.get_package_version.outputs.VERSION }} Setup.exe
+          asset_path: ./out/make/deb/x64/universal-rpc_${{ steps.get_package_version.outputs.VERSION }}_amd64.deb
+          asset_name: universal-rpc_${{ steps.get_package_version.outputs.VERSION }}_amd64.deb
           asset_content_type: application/octet-stream
