--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -1,4 +1,4 @@
-name: Upload release binaries
+name: Upload linux binaries
 
 on:
   release:
@@ -32,12 +32,9 @@ jobs:
         id: get_package_version
         run: echo "::set-output name=VERSION::$(node -e "console.log(require('./package.json').version);")"
       - name: Upload binaries
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ./out/make/deb/x64/universal-rpc_${{ steps.get_package_version.outputs.VERSION }}_amd64.deb
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./out/make/deb/x64/universal-rpc_${{ steps.get_package_version.outputs.VERSION }}_amd64.deb
-          asset_name: universal-rpc_${{ steps.get_package_version.outputs.VERSION }}_amd64.deb
-          asset_content_type: application/octet-stream
