Actions: build along with make the package
Build compiles the typescript code to JS. This is necessary so there
are no errors on launch.

Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install
       - name: Build
-        run: yarn make
+        run: yarn build && yarn make
       - name: Get package version
         id: get_package_version
         run: echo "::set-output name=VERSION::$(node -e "console.log(require('./package.json').version);")"
