--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^4.17.0",
     "electron": "12.0.0",
     "eslint": "^7.6.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.20.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
