Add buttons and fix type declarations
This update adds buttons to the application. The buttons have to have
BOTH the label and URL in order to show up on the RPC. An error
popup will be implemented in the next version of the app.

Resolves #3

Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
         "plugin:import/warnings"
     ],
     "parser": "@typescript-eslint/parser",
+    "rules": {
+        "@typescript-eslint/no-non-null-assertion": "off"
+    },
     "settings": {
         "import/resolver": {
             "typescript": {}
