--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-rpc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "productName": "universal-rpc",
   "description": "A custom discord game activity application",
   "main": "dist/index.js",
@@ -26,7 +26,8 @@
       "packagerConfig": {
         "prune": true,
         "ignore": [
-          "^/(src | .github)",
+          "^/(src)",
+          "^/(.github)",
           ".eslintrc",
           ".eslintignore",
           ".prettierrc",
